# biobloom

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/usabo_calibration/: manual_answer_tasks.md  open_exam_questions.jsonl  open_exam_sources.json
docs/: proposal.md
raw/: Campbell_Biology_12e_Table_of_Contents.txt
raw/markdown/: manifest_2003_2012.json  manifest_2013_2018.json
raw/markdown/2003/: 2003_OpenExam.md  extraction_report.md
raw/markdown/2004/: 2004_OpenExam.md  2004_answer_key.json
raw/markdown/2005/: 2005_OpenExam.md  2005_OpenExam_AnswerKey.md  2005_answer_key.json  README.md
raw/markdown/2006/: 2006_OpenExam.md  2006_answer_key.json
raw/markdown/2007/: 2007_OpenExam.md  2007_answer_key.json
raw/markdown/2008/: 2008_OpenExam.md  2008_answer_key.json
raw/markdown/2009/: 2009_OpenExam.md  2009_answer_key.json
raw/markdown/2010/: 2010_OpenExam.md  2010_answer_key.json
raw/markdown/2011/: 2011_OpenExam.md  2011_answer_key.json
raw/markdown/2012/: 2012_OpenExam.md  2012_answer_key.json
raw/markdown/2013/: 2013_OpenExam.md  2013_answer_key.json
raw/markdown/2014/: 2014_OpenExam.md  2014_answer_key.json
raw/markdown/2015/: 2015_OpenExam.md  2015_answer_key.json
raw/markdown/2016/: 2016_OpenExam.md  2016_answer_key.json
raw/markdown/2017/: 2017_OpenExam.md  2017_answer_key.json
src/biobloom/: __init__.py  usabo_calibration_bank.py  usabo_past_exams.py
tests/: test_pdfqa_image_extract.py  test_pdfqa_markdown.py  test_usabo_calibration_bank.py  test_usabo_past_exams.py
wiki/usabo_calibration/: index.md  log.md
(+49 files in other folders)
