[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biobloom"
version = "0.1.0"
description = "BioBloom project utilities"
requires-python = ">=3.9"
dependencies = [
  "fire>=0.7,<1",
  "loguru>=0.7,<1",
  "pymupdf>=1.26,<2",
  "requests>=2.32,<3",
  "urllib3<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
